--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:tailwind": "tailwind build src/assets/styles/index.css -o src/assets/styles/tailwind.css"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "@fortawesome/fontawesome-free": "5.15.3",
+    "@popperjs/core": "^2.11.5",
+    "axios": "^0.27.2",
+    "chart.js": "2.9.4",
+    "pinia": "^2.0.14",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
