--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,12 @@
 <IfModule mod_negotiation.c>
     Options -MultiViews
-  </IfModule>
+</IfModule>
   
-  <IfModule mod_rewrite.c>
+<IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteBase /
-    RewriteRule ^index\.html$ - [L]
+    RewriteBase /subdirectoryName
+    RewriteRule ^subdirectoryName/index\.html$ - [L]
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule . /index.html [L]
-  </IfModule>
+    RewriteRule . /subdirectoryName/index.html [L]
+</IfModule>
