--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.5",
     "axios": "^0.27.2",
     "chart.js": "2.9.4",
+    "laravel-vue-pagination": "^3.0.0",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16"
@@ -22,6 +23,7 @@
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "sass": "^1.53.0",
     "tailwindcss": "^3.1.4",
     "vite": "^2.9.9"
   }
