--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "^2.11.5",
+    "@vue-hero-icons/solid": "^1.7.2",
     "axios": "^0.27.2",
     "chart.js": "2.9.4",
     "laravel-vue-pagination": "^3.0.0",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.0.16",
+    "vuejs-paginate-next": "^1.0.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
