finsish table with filter, paginate and search

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@headlessui/vue": "^1.6.5",
     "@popperjs/core": "^2.11.5",
     "@vue-hero-icons/solid": "^1.7.2",
     "axios": "^0.27.2",
