--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@headlessui/vue": "^1.6.5",
     "@popperjs/core": "^2.11.5",
     "@vue-hero-icons/solid": "^1.7.2",
+    "@vuelidate/core": "^2.0.0-alpha.42",
+    "@vuelidate/validators": "^2.0.0-alpha.30",
     "axios": "^0.27.2",
     "chart.js": "2.9.4",
     "laravel-vue-pagination": "^3.0.0",
     "pinia": "^2.0.14",
+    "sweetalert2": "^11.4.19",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16",
-    "vuejs-paginate-next": "^1.0.2"
+    "vue3-popper": "^1.5.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
@@ -28,6 +31,7 @@
     "postcss": "^8.4.14",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.4",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vuejs-paginate-next": "^1.0.2"
   }
 }
