--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@vuelidate/validators": "^2.0.0-alpha.30",
     "axios": "^0.27.2",
     "chart.js": "2.9.4",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "laravel-vue-pagination": "^3.0.0",
     "pinia": "^2.0.14",
     "sweetalert2": "^11.4.19",
