--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@vue-hero-icons/solid": "^1.7.2",
     "@vuelidate/core": "^2.0.0-alpha.42",
     "@vuelidate/validators": "^2.0.0-alpha.30",
+    "@vueuse/core": "^8.9.0",
+    "ag-grid-community": "^28.0.0",
+    "ag-grid-vue3": "^28.0.0",
     "axios": "^0.27.2",
     "chart.js": "2.9.4",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.25",
+    "jwt-decode": "^3.1.2",
     "laravel-vue-pagination": "^3.0.0",
     "pinia": "^2.0.14",
     "sweetalert2": "^11.4.19",
     "vue": "^3.2.25",
+    "vue-html2pdf": "^1.8.0",
     "vue-router": "^4.0.16",
     "vue3-popper": "^1.5.0"
   },
